Проект №5 исправил Epic, HistoryManager, Managers, создал тесты.