@@ -1,12 +1,13 @@
+import java.security.cert.Extension;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
 public class Epic extends Task {
 
-    private List<Subtask> subtasks;
+    private final List<Subtask> subtasks;
 
-    public Epic(String title, String description) {
+    public Epic(String title, String description, Extension task1) {
         super(task1.getId(), title, description, TaskStatus.NEW);
         this.subtasks = new ArrayList<>();
     }
@@ -23,7 +24,7 @@ public class Epic extends Task {
     @Override
     public String toString() {
         return "Epic{" +
-                "subtasks=" + subtasks.stream().map(Subtask::getId).collect(Collectors.toList()) +
+                "subtasks=" + subtasks.stream().map(Subtask::getId).toList() +
                 ", title='" + getTitle() + '\''
                 +
                 ", id=" + getId() +
