@@ -1,20 +1,23 @@
 import java.util.ArrayList;
+
 import java.util.List;
-public class InMemoryHistoryManager extends HistoryManager {
+
+public class InMemoryHistoryManager implements HistoryManager {
     private final List<Task> history = new ArrayList<>();
+
     private static final int MAX_HISTORY_SIZE = 10;
 
     @Override
     public void add(Task task) {
         if (history.size() >= MAX_HISTORY_SIZE) {
-            history.remove(0);
+            history.removeFirst();
         }
         history.add(task);
+
     }
 
     @Override
-    public List<String> getHistory() {
+    public List<Task> getHistory() {
         return new ArrayList<>(history);
     }
 }
-
